added Bootstrap and modified HTML

--- a/src/app/customer-detail/customer-detail.component.html
+++ b/src/app/customer-detail/customer-detail.component.html
@@ -1,3 +1,5 @@
+<h2>Customer Detail</h2>
 <p>
-  customer-detail works!
+  Customer detail info found below.
 </p>
+<p><img src="http://placehold.it/350x150"></p>
