--- a/src/app/customer/customer.component.html
+++ b/src/app/customer/customer.component.html
@@ -1,4 +1,9 @@
-<p>
-  customer works!
+<h2>Customer</h2>
+<p>This is the customer page. Lorum ipsum dolor sit amet. Etiam imperdiet felis id sapien vehicula ultrices. Donec eu sem eget velit bibendum condimentum a fringilla dui.
+  Proin tempor est vel ligula tincidunt efficitur. Nam varius bibendum nisi. Duis ut dui rhoncus, malesuada eros vitae,
+  pharetra elit. Vestibulum pulvinar, elit a aliquam molestie, est lectus dictum ex, sit amet vestibulum ipsum ante
+  consectetur turpis. Cras imperdiet varius nisi, ac rhoncus diam convallis et. Duis sit amet leo urna. Nulla iaculis
+  malesuada mauris nec pellentesque. Praesent non ex velit.
 </p>
-<a routerLink="/customer-detail">Go to customer Detail</a>
+
+<a routerLink="/customer-detail" class="btn btn-md btn-primary">View Customer Detail</a>
