--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,38 @@
-<h1>
-  {{title}}
-</h1>
-<hr>
-<app-breadcrumb></app-breadcrumb>
-<br>
-<router-outlet></router-outlet>
+<!-- Fixed navbar -->
+<nav class="navbar navbar-default navbar-fixed-top">
+  <div class="container">
+    <div class="navbar-header">
+
+      <a class="navbar-brand" href="#">Angular 2 Breadcrumb</a>
+    </div>
+    <div id="navbar" class="navbar-collapse collapse">
+      <ul class="nav navbar-nav">
+      </ul>
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
+
+
+<div class="container">
+  <div class="container">
+    <app-breadcrumb></app-breadcrumb>
+
+    <!-- Content -->
+    <div class="row">
+      <div class="col-md-12">
+        <router-outlet></router-outlet>
+      </div>
+
+
+    </div>
+
+    <hr>
+
+    <footer>
+      <p>&copy; 2017 Breadcrumbs Inc.</p>
+    </footer>
+  </div> <!-- /container -->
+
+
+</div> <!-- /container -->
+
