--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,21 @@
-<p>
-  home works!
-</p>
-<a routerLink="/customer">Go to Customer</a>
+<div class="jumbotron">
+  <h1>Home Page</h1>
+  <p>Welcome to the home page. </p>
+</div>
+
+<div class="row">
+  <div class="col-md-4">
+    <h3>Customer</h3>
+    <p>View customer data here. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+  </div>
+  <div class="col-md-4">
+    <h3>Heading</h3>
+    <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+  </div>
+  <div class="col-md-4">
+    <h3>Heading</h3>
+    <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+  </div>
+</div>
+
+<a routerLink="/customer" class="btn btn-md btn-primary">View Customer</a>
